# yogurt2

./: .replit  app.py  init_calendar.py  init_moodboard.py  migrate_posture.py  models.py  pyproject.toml  replit.md  train_sitpose_model.py
attached_assets/: Pasted--Product-Requirements-Document-PRD-1-Title-AI-Powered-Calendar-KITEDESK-Calendar-2-Document-Re-1752764111319_1752764111321.txt  Pasted--Product-Requirements-Document-PRD-1-Title-AI-Powered-Calendar-KITEDESK-Calendar-2-Document-Re-1752764167382_1752764167383.txt  Pasted-Focus-Time-Tracking-Continuously-detect-when-the-user-is-looking-at-the-screen-using-head-facial-o-1745931853643.txt  Pasted-Functional-Requirements-Defined-Activity-States-The-focus-monitor-will-track-the-following-states--1745856216735.txt  Pasted-Project-Title-Smart-Work-Focus-Score-Web-App-for-Sit-Stand-Desk-Objective-Develop-a-web-based-in-1745855244768.txt  Pasted-import-logging-import-numpy-as-np-from-collections-import-deque-import-mediapipe-as-mp-from-datetime-1752400899948_1752400899949.txt
instance/: smartdesk.db
models/: activity_metadata.json  activity_recognition.tflite  sitpose_metadata.json  sitpose_scaler.pkl  substate_metadata.json
templates/: activity_records.html  ai_calendar.html  index.html  layout.html  monitor.html
utils/: activity_analyzer.py  advanced_posture_detector.py  ai_calendar.py  camera_processor.py  dataset_collector.py  enhanced_posture_analyzer.py  eye_tracker.py  focus_calculator.py  model_trainer.py  new_posture_analyzer.py  posture_analyzer.py  posture_calibrator.py  posture_detector.py  (+6 more)
(+11 files in other folders)
