[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.26.0",
    "gunicorn>=23.0.0",
    "joblib>=1.5.1",
    "mediapipe>=0.10.21",
    "openai>=1.76.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.40",
    "tflite-runtime>=2.14.0",
    "werkzeug>=3.1.3",
]
